<!--
  ~ Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
  ~ SPDX-License-Identifier: MIT-0
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AmazonChimeSDKMessagingDemo</string>
    <string name="messaging_title">Join a messaging session</string>
    <string name="edit_user_name">User Name</string>
    <string name="edit_password">Password</string>
    <string name="edit_sessionId">Session Id (Optional)</string>
    <string name="button_sign_in">Sign in</string>
    <string name="exchange_token_service_title">Or you can get AWS credentials via Credential Exchange Service</string>
    <string name="button_exchange">Exchange Token for AWS Credentials</string>
    <string name="messages_title">Messages</string>
    <string name="login_as">Logged in as: </string>
    <string name="enter_message">Enter message</string>
    <string name="send_message">Send Message</string>
    <string name="channel_list">Channel List</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="other_settings">Other Settings</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="endpoints">Endpoint Configuration</string>
    <string name="app_instance_settings">App Instance Settings</string>
</resources>
