<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
  ~ SPDX-License-Identifier: Apache-2.0
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.amazonaws.services.chime.sdkdemo.ui.messaging.presentation.MessagingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/messagingContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/chatView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_marginVertical="16dp"
            android:background="#E6FFFFFF"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/messagesTitle"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/messages_title"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/loginAs"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textAlignment="center"
                android:textSize="14sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/messageList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="8dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editMessage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="bottom"
                    android:inputType="text"
                    android:hint="@string/enter_message"
                    android:imeOptions="actionSend"
                    android:text="@={viewModel.messageEditing}" />

                <ImageButton
                    android:id="@+id/buttonSubmitMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:contentDescription="@string/send_message"
                    android:src="@drawable/button_send_message"
                    android:tint="?android:attr/textColorPrimary" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
